<resources>
    <string name="app_name">LoginLinearLayout</string>
    <string name="txtV_SignIn">Acceder</string>
    <string name="txtV_User">Nombre de usuario / Correo electrónico</string>
    <string name="txtV_Password">Contraseña</string>
    <string name="btn_SignIn">Acceder</string>
    <string name="btn_GoogleSign">Acceder con Google+</string>
    <string name="btn_FBSign">Acceder con Facebook</string>
    <string name="btn_Remember"><u>Recuerdame</u></string>
    <string name="btn_SignUp">Registrarme</string>
</resources>
